[gd_scene load_steps=88 format=2]

[ext_resource path="res://GlobalTheme.tres" type="Theme" id=1]
[ext_resource path="res://Game/TooltipDisplay.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/GameUI.gd" type="Script" id=3]
[ext_resource path="res://UI/FontResources/Normal/NormalFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://UI/FontResources/Normal/BoldItalicsFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://UI/FontResources/Normal/ItalicsFont.tres" type="DynamicFont" id=6]
[ext_resource path="res://UI/FontResources/Normal/BoldFont.tres" type="DynamicFont" id=7]
[ext_resource path="res://Game/PlayerPanel.tscn" type="PackedScene" id=8]
[ext_resource path="res://UI/MapAndTimePanel.tscn" type="PackedScene" id=9]
[ext_resource path="res://Game/SmartCharacterPanel.tscn" type="PackedScene" id=10]
[ext_resource path="res://UI/RichTextBoxEffects/ghost_richtexteffect.tres" type="RichTextEffect" id=11]
[ext_resource path="res://UI/MainMenu/InGameMenu.tscn" type="PackedScene" id=12]
[ext_resource path="res://UI/SkillsUI/SkillsUI.tscn" type="PackedScene" id=13]
[ext_resource path="res://Game/SmartScrollContainer.gd" type="Script" id=14]
[ext_resource path="res://UI/DebugUI/DebugPanel.tscn" type="PackedScene" id=15]
[ext_resource path="res://UI/RichTextBoxEffects/pulse_richtexteffect.tres" type="RichTextEffect" id=16]
[ext_resource path="res://UI/RichTextBoxEffects/matrix_richtexteffect.tres" type="RichTextEffect" id=17]
[ext_resource path="res://UI/RichTextBoxEffects/console_richtexteffect.tres" type="RichTextEffect" id=18]
[ext_resource path="res://UI/RichTextBoxEffects/cuss_richtexteffect.tres" type="RichTextEffect" id=19]
[ext_resource path="res://UI/RichTextBoxEffects/corrupt_richtexteffect.tres" type="RichTextEffect" id=20]
[ext_resource path="res://UI/LayeredSprite.gd" type="Script" id=21]
[ext_resource path="res://UI/HornyMessageUI/HornyMessage.tscn" type="PackedScene" id=22]
[ext_resource path="res://Images/UI/expandHover.png" type="Texture" id=23]
[ext_resource path="res://Images/UI/expand.png" type="Texture" id=24]
[ext_resource path="res://Game/SceneOptionButton.tscn" type="PackedScene" id=25]
[ext_resource path="res://addons/controller_icons/assets/key/f9.png" type="Texture" id=26]
[ext_resource path="res://addons/controller_icons/assets/key/2.png" type="Texture" id=27]
[ext_resource path="res://addons/controller_icons/assets/key/5.png" type="Texture" id=28]
[ext_resource path="res://addons/controller_icons/assets/key/q.png" type="Texture" id=29]
[ext_resource path="res://addons/controller_icons/assets/key/e.png" type="Texture" id=30]
[ext_resource path="res://addons/controller_icons/assets/key/a.png" type="Texture" id=31]
[ext_resource path="res://addons/controller_icons/assets/key/d.png" type="Texture" id=32]
[ext_resource path="res://addons/controller_icons/assets/key/c.png" type="Texture" id=33]
[ext_resource path="res://addons/controller_icons/assets/key/f.png" type="Texture" id=34]
[ext_resource path="res://addons/controller_icons/assets/key/g.png" type="Texture" id=35]
[ext_resource path="res://addons/controller_icons/assets/key/3.png" type="Texture" id=36]
[ext_resource path="res://addons/controller_icons/assets/key/4.png" type="Texture" id=37]
[ext_resource path="res://addons/controller_icons/assets/key/w.png" type="Texture" id=38]
[ext_resource path="res://addons/controller_icons/assets/key/f5.png" type="Texture" id=39]
[ext_resource path="res://Game/SceneOptionPageButton.tscn" type="PackedScene" id=40]
[ext_resource path="res://addons/controller_icons/objects/Button.gd" type="Script" id=41]
[ext_resource path="res://addons/controller_icons/assets/key/r.png" type="Texture" id=42]
[ext_resource path="res://addons/controller_icons/assets/key/x.png" type="Texture" id=43]
[ext_resource path="res://addons/controller_icons/assets/key/t.png" type="Texture" id=44]
[ext_resource path="res://addons/controller_icons/assets/key/s.png" type="Texture" id=45]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.207843, 0.133333, 0.364706, 1 )
corner_radius_top_right = 16
corner_radius_bottom_right = 16

[sub_resource type="InputEventAction" id=21]
action = "gameui_quicksave"

[sub_resource type="ShortCut" id=16]
shortcut = SubResource( 21 )

[sub_resource type="InputEventAction" id=22]
action = "gameui_quickload"

[sub_resource type="ShortCut" id=18]
shortcut = SubResource( 22 )

[sub_resource type="InputEventAction" id=23]
action = "gameui_skills"

[sub_resource type="ShortCut" id=10]
shortcut = SubResource( 23 )

[sub_resource type="InputEventAction" id=24]
action = "gameui_menu"

[sub_resource type="ShortCut" id=8]
shortcut = SubResource( 24 )

[sub_resource type="InputEventAction" id=60]
action = "gameui_prevpage"

[sub_resource type="ShortCut" id=61]
shortcut = SubResource( 60 )

[sub_resource type="InputEventAction" id=33]
action = "ingame_option_a0"

[sub_resource type="ShortCut" id=34]
shortcut = SubResource( 33 )

[sub_resource type="InputEventAction" id=31]
action = "ingame_option_a1"

[sub_resource type="ShortCut" id=32]
shortcut = SubResource( 31 )

[sub_resource type="InputEventAction" id=35]
action = "ingame_option_a2"

[sub_resource type="ShortCut" id=30]
shortcut = SubResource( 35 )

[sub_resource type="InputEventAction" id=36]
action = "ingame_option_a3"

[sub_resource type="ShortCut" id=37]
shortcut = SubResource( 36 )

[sub_resource type="InputEventAction" id=38]
action = "ingame_option_a4"

[sub_resource type="ShortCut" id=39]
shortcut = SubResource( 38 )

[sub_resource type="InputEventAction" id=40]
action = "ingame_option_b0"

[sub_resource type="ShortCut" id=41]
shortcut = SubResource( 40 )

[sub_resource type="InputEventAction" id=42]
action = "ingame_option_b1"

[sub_resource type="ShortCut" id=43]
shortcut = SubResource( 42 )

[sub_resource type="InputEventAction" id=44]
action = "ingame_option_b2"

[sub_resource type="ShortCut" id=45]
shortcut = SubResource( 44 )

[sub_resource type="InputEventAction" id=46]
action = "ingame_option_b3"

[sub_resource type="ShortCut" id=47]
shortcut = SubResource( 46 )

[sub_resource type="InputEventAction" id=48]
action = "ingame_option_b4"

[sub_resource type="ShortCut" id=49]
shortcut = SubResource( 48 )

[sub_resource type="InputEventAction" id=50]
action = "ingame_option_c0"

[sub_resource type="ShortCut" id=51]
shortcut = SubResource( 50 )

[sub_resource type="InputEventAction" id=52]
action = "ingame_option_c1"

[sub_resource type="ShortCut" id=53]
shortcut = SubResource( 52 )

[sub_resource type="InputEventAction" id=54]
action = "ingame_option_c2"

[sub_resource type="ShortCut" id=55]
shortcut = SubResource( 54 )

[sub_resource type="InputEventAction" id=56]
action = "ingame_option_c3"

[sub_resource type="ShortCut" id=57]
shortcut = SubResource( 56 )

[sub_resource type="InputEventAction" id=58]
action = "ingame_option_c4"

[sub_resource type="ShortCut" id=59]
shortcut = SubResource( 58 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.207843, 0.133333, 0.364706, 1 )
corner_radius_top_left = 16
corner_radius_bottom_left = 16

[node name="GameUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -2.82843
margin_bottom = -2.82843
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel2" type="Panel" parent="HBoxContainer"]
margin_right = 260.0
margin_bottom = 720.0
rect_min_size = Vector2( 260, 0 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 12.0
margin_right = -12.0
margin_bottom = -12.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Panel2/MarginContainer"]
margin_right = 236.0
margin_bottom = 696.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SmartCharacterPanel" parent="HBoxContainer/Panel2/MarginContainer/VBoxContainer" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 236.0
margin_bottom = 328.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer3" type="VBoxContainer" parent="HBoxContainer/Panel2/MarginContainer/VBoxContainer"]
margin_top = 332.0
margin_right = 236.0
margin_bottom = 342.0
rect_min_size = Vector2( 0, 10 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.01

[node name="MapAndTimePanel" parent="HBoxContainer/Panel2/MarginContainer/VBoxContainer" instance=ExtResource( 9 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 346.0
margin_right = 236.0
margin_bottom = 606.0

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/Panel2/MarginContainer/VBoxContainer"]
margin_top = 610.0
margin_right = 236.0
margin_bottom = 636.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveButton" type="Button" parent="HBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 116.0
margin_bottom = 26.0
hint_tooltip = "Quick save (F5)"
size_flags_horizontal = 3
shortcut_in_tooltip = false
shortcut = SubResource( 16 )
text = "Q.save"
icon = ExtResource( 39 )
expand_icon = true
script = ExtResource( 41 )
path = "gameui_quicksave"

[node name="LoadButton" type="Button" parent="HBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 120.0
margin_right = 236.0
margin_bottom = 26.0
hint_tooltip = "Quick load (F9)"
size_flags_horizontal = 3
shortcut_in_tooltip = false
shortcut = SubResource( 18 )
text = "Q.load"
icon = ExtResource( 26 )
expand_icon = true
script = ExtResource( 41 )
path = "gameui_quickload"

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer/Panel2/MarginContainer/VBoxContainer"]
margin_top = 640.0
margin_right = 236.0
margin_bottom = 666.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkillsButton" type="Button" parent="HBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_right = 95.0
margin_bottom = 26.0
hint_tooltip = "Spend the stat points and look at your skills (X)"
size_flags_horizontal = 3
shortcut_in_tooltip = false
shortcut = SubResource( 10 )
text = "Skills"
icon = ExtResource( 43 )
expand_icon = true
script = ExtResource( 41 )
path = "gameui_skills"

[node name="MenuButton" type="Button" parent="HBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 99.0
margin_right = 195.0
margin_bottom = 26.0
hint_tooltip = "Open the menu (C)"
size_flags_horizontal = 3
shortcut_in_tooltip = false
shortcut = SubResource( 8 )
text = "Menu"
icon = ExtResource( 33 )
expand_icon = true
script = ExtResource( 41 )
path = "gameui_menu"

[node name="DebugMenu" type="Button" parent="HBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 199.0
margin_right = 236.0
margin_bottom = 26.0
hint_tooltip = "Open the debug/cheats menu"
shortcut_in_tooltip = false
text = "DG"
script = ExtResource( 41 )

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/Panel2/MarginContainer/VBoxContainer"]
margin_top = 670.0
margin_right = 236.0
margin_bottom = 696.0

[node name="RollbackButton" type="Button" parent="HBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 236.0
margin_bottom = 26.0
hint_tooltip = "Rollback the game's state back"
size_flags_horizontal = 3
shortcut_in_tooltip = false
text = "Rollback"
script = ExtResource( 41 )

[node name="HSplitContainer" type="HSplitContainer" parent="HBoxContainer"]
margin_left = 264.0
margin_right = 269.0
margin_bottom = 720.0
rect_min_size = Vector2( 5, 0 )

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 273.0
margin_right = 983.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Control" parent="HBoxContainer/VBoxContainer2"]
margin_right = 710.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )

[node name="TranslateBox" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TranslateStatusLabel" type="Label" parent="HBoxContainer/VBoxContainer2/Panel/TranslateBox"]
margin_top = 5.0
margin_bottom = 25.0

[node name="ShowOriginalCheckbox" type="CheckBox" parent="HBoxContainer/VBoxContainer2/Panel/TranslateBox"]
margin_left = 4.0
margin_right = 146.0
margin_bottom = 30.0
text = "Show original"

[node name="ManualTranslateButton" type="Button" parent="HBoxContainer/VBoxContainer2/Panel/TranslateBox"]
margin_left = 150.0
margin_right = 242.0
margin_bottom = 30.0
text = "Translate"

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/VBoxContainer2"]
margin_top = 34.0
margin_right = 710.0
margin_bottom = 618.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 14 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2/ScrollContainer"]
margin_right = 710.0
margin_bottom = 584.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SceneArtWorkRect" type="TextureRect" parent="HBoxContainer/VBoxContainer2/ScrollContainer/VBoxContainer"]
margin_right = 710.0
size_flags_horizontal = 3
expand = true
stretch_mode = 6
script = ExtResource( 21 )

[node name="OpenFullArtWorkButton" type="TextureButton" parent="HBoxContainer/VBoxContainer2/ScrollContainer/VBoxContainer/SceneArtWorkRect"]
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = ExtResource( 24 )
texture_hover = ExtResource( 23 )
expand = true
stretch_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/VBoxContainer2/ScrollContainer/VBoxContainer"]
margin_top = 4.0
margin_right = 710.0
margin_bottom = 29.0
focus_mode = 2
mouse_filter = 1
size_flags_horizontal = 3
custom_fonts/bold_italics_font = ExtResource( 5 )
custom_fonts/italics_font = ExtResource( 6 )
custom_fonts/bold_font = ExtResource( 7 )
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
fit_content_height = true
selection_enabled = true
custom_effects = [ ExtResource( 11 ), ExtResource( 17 ), ExtResource( 16 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ) ]

[node name="UniquePanelSpot" type="MarginContainer" parent="HBoxContainer/VBoxContainer2"]
visible = false
margin_top = 358.0
margin_right = 710.0
margin_bottom = 678.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]
margin_top = 622.0
margin_right = 710.0
margin_bottom = 708.0

[node name="PrevPageButton" parent="HBoxContainer/VBoxContainer2/HBoxContainer" instance=ExtResource( 40 )]
shortcut = SubResource( 61 )
text = "<"

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 27.0
margin_right = 683.0
margin_bottom = 86.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 5
__meta__ = {
"_edit_lock_": true
}

[node name="SceneOptionButtonA0" parent="HBoxContainer/VBoxContainer2/HBoxContainer/GridContainer" instance=ExtResource( 25 )]
margin_right = 128.0
shortcut = SubResource( 34 )

[node name="SceneOptionButtonA1" parent="HBoxContainer/VBoxContainer2/HBoxContainer/GridContainer" instance=ExtResource( 25 )]
margin_left = 132.0
margin_right = 260.0
shortcut = SubResource( 32 )
icon = ExtResource( 27 )
path = "ingame_option_a1"

[node name="SceneOptionButtonA2" parent="HBoxContainer/VBoxContainer2/HBoxContainer/GridContainer" instance=ExtResource( 25 )]
margin_left = 264.0
margin_right = 392.0
shortcut = SubResource( 30 )
icon = ExtResource( 36 )
path = "ingame_option_a2"

[node name="SceneOptionButtonA3" parent="HBoxContainer/VBoxContainer2/HBoxContainer/GridContainer" instance=ExtResource( 25 )]
margin_left = 396.0
margin_right = 524.0
shortcut = SubResource( 37 )
icon = ExtResource( 37 )
path = "ingame_option_a3"

[node name="SceneOptionButtonA4" parent="HBoxContainer/VBoxContainer2/HBoxContainer/GridContainer" instance=ExtResource( 25 )]
margin_left = 528.0
margin_right = 656.0
shortcut = SubResource( 39 )
icon = ExtResource( 28 )
path = "ingame_option_a4"

[node name="SceneOptionButtonB0" parent="HBoxContainer/VBoxContainer2/HBoxContainer/GridContainer" instance=ExtResource( 25 )]
margin_top = 30.0
margin_right = 128.0
margin_bottom = 56.0
shortcut = SubResource( 41 )
icon = ExtResource( 29 )
path = "ingame_option_b0"

[node name="SceneOptionButtonB1" parent="HBoxContainer/VBoxContainer2/HBoxContainer/GridContainer" instance=ExtResource( 25 )]
margin_left = 132.0
margin_top = 30.0
margin_right = 260.0
margin_bottom = 56.0
shortcut = SubResource( 43 )
icon = ExtResource( 38 )
path = "ingame_option_b1"

[node name="SceneOptionButtonB2" parent="HBoxContainer/VBoxContainer2/HBoxContainer/GridContainer" instance=ExtResource( 25 )]
margin_left = 264.0
margin_top = 30.0
margin_right = 392.0
margin_bottom = 56.0
shortcut = SubResource( 45 )
icon = ExtResource( 30 )
path = "ingame_option_b2"

[node name="SceneOptionButtonB3" parent="HBoxContainer/VBoxContainer2/HBoxContainer/GridContainer" instance=ExtResource( 25 )]
margin_left = 396.0
margin_top = 30.0
margin_right = 524.0
margin_bottom = 56.0
shortcut = SubResource( 47 )
icon = ExtResource( 42 )
path = "ingame_option_b3"

[node name="SceneOptionButtonB4" parent="HBoxContainer/VBoxContainer2/HBoxContainer/GridContainer" instance=ExtResource( 25 )]
margin_left = 528.0
margin_top = 30.0
margin_right = 656.0
margin_bottom = 56.0
shortcut = SubResource( 49 )
icon = ExtResource( 44 )
path = "ingame_option_b4"

[node name="SceneOptionButtonC0" parent="HBoxContainer/VBoxContainer2/HBoxContainer/GridContainer" instance=ExtResource( 25 )]
margin_top = 60.0
margin_right = 128.0
margin_bottom = 86.0
shortcut = SubResource( 51 )
icon = ExtResource( 31 )
path = "ingame_option_c0"

[node name="SceneOptionButtonC1" parent="HBoxContainer/VBoxContainer2/HBoxContainer/GridContainer" instance=ExtResource( 25 )]
margin_left = 132.0
margin_top = 60.0
margin_right = 260.0
margin_bottom = 86.0
shortcut = SubResource( 53 )
icon = ExtResource( 45 )
path = "ingame_option_c1"

[node name="SceneOptionButtonC2" parent="HBoxContainer/VBoxContainer2/HBoxContainer/GridContainer" instance=ExtResource( 25 )]
margin_left = 264.0
margin_top = 60.0
margin_right = 392.0
margin_bottom = 86.0
shortcut = SubResource( 55 )
icon = ExtResource( 32 )
path = "ingame_option_c2"

[node name="SceneOptionButtonC3" parent="HBoxContainer/VBoxContainer2/HBoxContainer/GridContainer" instance=ExtResource( 25 )]
margin_left = 396.0
margin_top = 60.0
margin_right = 524.0
margin_bottom = 86.0
shortcut = SubResource( 57 )
icon = ExtResource( 34 )
path = "ingame_option_c3"

[node name="SceneOptionButtonC4" parent="HBoxContainer/VBoxContainer2/HBoxContainer/GridContainer" instance=ExtResource( 25 )]
margin_left = 528.0
margin_top = 60.0
margin_right = 656.0
margin_bottom = 86.0
shortcut = SubResource( 59 )
icon = ExtResource( 35 )
path = "ingame_option_c4"

[node name="NextPageButton" parent="HBoxContainer/VBoxContainer2/HBoxContainer" instance=ExtResource( 40 )]
margin_left = 687.0
margin_right = 710.0

[node name="Control" type="Control" parent="HBoxContainer/VBoxContainer2"]
margin_top = 712.0
margin_right = 710.0
margin_bottom = 720.0
rect_min_size = Vector2( 0, 8 )

[node name="InGameMenu" parent="HBoxContainer" instance=ExtResource( 12 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 652.0
margin_right = 1027.0
margin_bottom = 720.0

[node name="SkillsUI" parent="HBoxContainer" instance=ExtResource( 13 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 273.0
margin_right = 648.0
margin_bottom = 720.0

[node name="DevCommentary" type="VBoxContainer" parent="HBoxContainer"]
visible = false
margin_left = 273.0
margin_right = 983.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/DevCommentary"]
margin_right = 710.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/DevCommentary"]
margin_top = 24.0
margin_right = 710.0
margin_bottom = 616.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 14 )

[node name="DevComLabel" type="RichTextLabel" parent="HBoxContainer/DevCommentary/ScrollContainer"]
margin_right = 710.0
margin_bottom = 592.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/bold_italics_font = ExtResource( 5 )
custom_fonts/italics_font = ExtResource( 6 )
custom_fonts/bold_font = ExtResource( 7 )
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
fit_content_height = true

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/DevCommentary"]
margin_top = 620.0
margin_right = 710.0
margin_bottom = 720.0
rect_min_size = Vector2( 0, 100 )
columns = 5

[node name="CloseButton" type="Button" parent="HBoxContainer/DevCommentary/GridContainer"]
margin_right = 142.0
margin_bottom = 26.0
size_flags_horizontal = 3
text = "Close"

[node name="DebugPanel" parent="HBoxContainer" instance=ExtResource( 15 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 984.0
margin_right = 984.0
margin_bottom = 720.0

[node name="HSplitContainer2" type="HSplitContainer" parent="HBoxContainer"]
margin_left = 987.0
margin_right = 992.0
margin_bottom = 720.0
rect_min_size = Vector2( 5, 0 )

[node name="Panel" type="Panel" parent="HBoxContainer"]
margin_left = 996.0
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 240, 0 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
custom_styles/panel = SubResource( 6 )

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 12.0
margin_right = -12.0
margin_bottom = -12.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlayerPanel" parent="HBoxContainer/Panel/MarginContainer" instance=ExtResource( 8 )]
margin_right = 354.0
margin_bottom = 696.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TooltipDisplay" parent="CanvasLayer" instance=ExtResource( 2 )]
margin_left = 30.2906
margin_top = -128.289
margin_right = 280.291
margin_bottom = -96.289

[node name="FullArtworkRect" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 6
script = ExtResource( 21 )

[node name="ColorRect" type="ColorRect" parent="FullArtworkRect"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.419608 )

[node name="CloseFullArtWork" type="Button" parent="FullArtworkRect"]
margin_left = 20.0
margin_top = 18.8284
margin_right = 78.0
margin_bottom = 44.8284
rect_min_size = Vector2( 100, 40 )
text = "Close"

[node name="Label" type="Label" parent="FullArtworkRect"]
margin_left = 20.0
margin_top = 70.0
margin_right = 71.0
margin_bottom = 90.0

[node name="MessageSystem" parent="." instance=ExtResource( 22 )]
visible = false

[connection signal="onDevComButton" from="HBoxContainer/Panel2/MarginContainer/VBoxContainer/MapAndTimePanel" to="." method="_on_MapAndTimePanel_onDevComButton"]
[connection signal="pressed" from="HBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer2/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer2/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer3/SkillsButton" to="." method="_on_SkillsButton_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer3/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer3/DebugMenu" to="." method="_on_DebugMenu_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer/RollbackButton" to="." method="_on_RollbackButton_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/Panel/TranslateBox/ShowOriginalCheckbox" to="." method="_on_ShowOriginalCheckbox_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/Panel/TranslateBox/ManualTranslateButton" to="." method="_on_ManualTranslateButton_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/ScrollContainer/VBoxContainer/SceneArtWorkRect/OpenFullArtWorkButton" to="." method="_on_OpenFullArtWorkButton_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/HBoxContainer/PrevPageButton" to="." method="_on_PrevPageButton_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/HBoxContainer/NextPageButton" to="." method="_on_NextPageButton_pressed"]
[connection signal="onResumeButtonPressed" from="HBoxContainer/InGameMenu" to="." method="showGameScreen"]
[connection signal="onClosePressed" from="HBoxContainer/SkillsUI" to="." method="showGameScreen"]
[connection signal="meta_clicked" from="HBoxContainer/DevCommentary/ScrollContainer/DevComLabel" to="." method="_on_DevComLabel_meta_clicked"]
[connection signal="pressed" from="HBoxContainer/DevCommentary/GridContainer/CloseButton" to="." method="showGameScreen"]
[connection signal="pressed" from="FullArtworkRect/CloseFullArtWork" to="." method="_on_CloseFullArtWork_pressed"]
